--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -72,13 +72,49 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="8BA-tZ-Bei">
-                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="120" id="8BA-tZ-Bei" customClass="TweetCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="120"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8BA-tZ-Bei" id="G3s-D8-Ii5">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="119.66666666666667"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bEz-xL-1bU">
+                                            <rect key="frame" x="20" y="11" width="65" height="65"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="65" id="2Bh-Jb-ol3"/>
+                                                <constraint firstAttribute="height" constant="65" id="VXu-AO-aHB"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Matt Rod" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uqd-N7-3fF">
+                                            <rect key="frame" x="93" y="11" width="62.666666666666657" height="17"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8UL-33-20O">
+                                            <rect key="frame" x="93" y="32" width="301" height="77"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="8UL-33-20O" firstAttribute="trailing" secondItem="G3s-D8-Ii5" secondAttribute="trailingMargin" id="2y0-NN-afN"/>
+                                        <constraint firstItem="uqd-N7-3fF" firstAttribute="top" secondItem="G3s-D8-Ii5" secondAttribute="topMargin" id="9m7-0q-Luw"/>
+                                        <constraint firstItem="bEz-xL-1bU" firstAttribute="leading" secondItem="G3s-D8-Ii5" secondAttribute="leadingMargin" id="NYD-XZ-92f"/>
+                                        <constraint firstItem="8UL-33-20O" firstAttribute="leading" secondItem="bEz-xL-1bU" secondAttribute="trailing" constant="8" id="Ren-Fa-Oa8"/>
+                                        <constraint firstItem="bEz-xL-1bU" firstAttribute="top" secondItem="G3s-D8-Ii5" secondAttribute="topMargin" id="WQ0-EJ-rQw"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="8UL-33-20O" secondAttribute="bottom" id="bih-ww-pMb"/>
+                                        <constraint firstItem="uqd-N7-3fF" firstAttribute="leading" secondItem="bEz-xL-1bU" secondAttribute="trailing" constant="8" id="olF-Xp-IkY"/>
+                                        <constraint firstItem="8UL-33-20O" firstAttribute="top" secondItem="uqd-N7-3fF" secondAttribute="bottom" constant="4" id="q7U-gp-7lQ"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="profileImageView" destination="bEz-xL-1bU" id="m7w-HF-zPL"/>
+                                    <outlet property="tweetLabel" destination="8UL-33-20O" id="tqe-x3-9eW"/>
+                                    <outlet property="usernameLabel" destination="uqd-N7-3fF" id="WcY-HZ-Ksq"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -97,7 +133,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VvH-7o-lif" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1855" y="33"/>
+            <point key="canvasLocation" x="1853.6231884057972" y="32.608695652173914"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="80L-sa-cPj">
